--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -84,7 +84,7 @@ a {
     text-decoration: none;
     color: $blue;
     display: inline-block;
-    margin: 0 0 0 40px;
+    margin: 0 40px 0 0;
 }
 
 div.circle {
