--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -77,7 +77,7 @@ p.read-more {
     padding-bottom: 50px;
 }
 
-div.blog-posts{
+div.blog-posts {
     max-width: 540px;
 }
 
@@ -91,9 +91,8 @@ a {
 
 
 div.logo {
-    height: 80px;
-    width: 80px;
-    background-image: url(/assets/images/logov2.svg);
+    height: 100px;
+    background-image: url(/assets/images/flag.svg);
     
   }
 
