update logo header V5b

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -92,9 +92,8 @@ a {
 
 div.logo {
     height: 100px;
-    width: 100%,
+    width: 220px;
     background-image: url(/assets/images/flag.svg);
-    
   }
 
   header a {
