update logo header V5c

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -91,8 +91,7 @@ a {
 
 
 div.logo {
-    height: 100px;
-    width: 100px;
+    background-size: contain;
     background-image: url(/assets/images/flag.svg);
   }
 
