--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -91,7 +91,8 @@ a {
 
 
 div.logo {
-    background-size: contain;
+    background-repeat: no-repeat;
+    height: 300px;
     background-image: url(/assets/images/flag.svg);
   }
 
