--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -92,7 +92,8 @@ a {
 
 div.logo {
     background-repeat: no-repeat;
-    height: 300px;
+    height: 100px;
+    width: 220px;
     background-image: url(/assets/images/flag.svg);
   }
 
