update logo header V6

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -26,7 +26,7 @@ body {
     line-height: 1.2;
     font-family: $typography, Arial;
     max-width: 780px;
-    margin:80px auto 80px auto;
+    margin:80px auto 40px auto;
 }
 
 h1 {
@@ -54,7 +54,7 @@ justify-content: space-between;
 
 
 section {
-    margin: 20px 0 0 0;
+    margin: 0 0 0 0;
 }
 
 nav a {
@@ -105,7 +105,7 @@ div.logo {
   div.post {
 
     h3 {
-    margin-top: 80px;
+    margin-top: 40px;
     }
 
     p {
