--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -26,7 +26,7 @@ body {
     line-height: 1.2;
     font-family: $typography, Arial;
     max-width: 780px;
-    margin:80px auto 0px auto;
+    margin:80px auto 0 auto;
 }
 
 h1 {
