update logo header V6g

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -72,6 +72,10 @@ img {
  max-width: 780px;   
 }
 
+img.read-more {
+    width: 20px;
+}
+
 p.read-more {
     font-weight:700;
     padding-bottom: 50px;
