--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -72,14 +72,13 @@ img {
  max-width: 780px;   
 }
 
-img.read-more {
-    width: 20px;
-}
+
 
 p.read-more {
     font-weight:700;
     padding-bottom: 50px;
     width: 20px;
+    display: inline-block;
 }
 
 div.blog-posts {
