--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,14 +23,14 @@
 $background:#f2f1ef;
 $blue:#2454a6;
 $red:#e42759;
-$typography: Raisonne;
+$typography: Raisonne Regular;
 
 body {
     background-color: $background;
     color:$blue;
     font-weight: 300;
     line-height: 1.2;
-    font-family: $typography, Arial;
+    font-family: $typography;
     max-width: 780px;
     margin:80px auto 0 auto;
 }
@@ -133,3 +133,79 @@ div.logo {
     }
 
   }
+
+
+
+  /* ------------ max 1500px ------------ */
+@media (max-width: 1500px) {
+  .link {
+    height: 3vw;
+  }
+
+  img.prev1,
+  img.random,
+  img.next1 {
+    display: block;
+    height: 1vw;
+    margin-bottom: 0.4vw;
+  }
+  
+    .filters {
+  padding-left: 20px;
+  
+}
+  
+    .hero img {
+  height: 25vw;
+}
+  
+}
+
+/* ------------ PHONE ------------ */
+@media (max-width: 420px) {
+  
+  body {
+    
+    max-width: 400px;
+    margin: 40px auto 0 auto;
+}
+
+
+header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+div.logo {
+  background-repeat: no-repeat;
+  height: 200px;
+  width: 350px;
+  background-image: url(/assets/images/flag.svg);
+}
+
+section {
+  margin: 40px 20px 20px 20px;
+}
+
+
+div.blog-posts img {
+  max-width: 350px;
+}
+
+
+h2 {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight:400;
+}
+
+
+
+
+}
