--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,10 +5,20 @@
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 440px;
 
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+
 
 // Small devices
 @mixin sm {
   @media (min-width: #{$screen-sm-min}) {
+      @content;
+  }
+}
+
+// large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
       @content;
   }
 }
@@ -45,8 +55,10 @@ body {
     font-weight: 300;
     line-height: 1.2;
     font-family: $typography;
+    @include xl {
     max-width: 780px;
     margin:80px auto 0 auto;
+  }
     // phone
     @include sm {
       max-width: 400px;
