--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -90,6 +90,11 @@ p.read-more {
 
 div.blog-posts {
     max-width: 540px;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 a {
