--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -89,6 +89,8 @@ div.blog-posts {
     max-width: 540px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
   
 
 }
