--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header>
 
 <a href="https://www.emho.studio">
-    <div class="logo"></div>
+    <div class="logo">
+        <img src="/assets/images/logov2.svg"
+    </div>
 </a>
       
 <nav>
