--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <a href="https://www.emho.studio">
     <div class="logo">
-        <img src="/assets/images/logov2.svg"
+        <img src="/assets/images/flag.svg"
     </div>
 </a>
       
