--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -63,12 +63,12 @@ section {
     margin: 0 0 0 0;
 }
 
-nav a {
+a {
     color: $blue;
     text-decoration: none;  
 }
 
-nav a.selected, p a {
+a.selected, p a {
 color: $blue;
 text-decoration: none;
 border-bottom: 3px solid $red;
@@ -105,7 +105,6 @@ header h1 {
   width: 200px;  
   }
 
-  }
 
   header a {
     margin: 20px;
