--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
 </div>
 
 <div>
-<h1>
-<img src="/assets/images/flag.svg">
-</h1>
+
+<img class="logo" src="/assets/images/flag.svg">
+
 </div>
 
 <div>
