--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -55,6 +55,7 @@ display: flex;
 flex-wrap: nowrap;
 align-items: center;
 justify-content: space-between;
+align-items: center;
 }
 
 
@@ -90,6 +91,7 @@ div.blog-posts {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 80px;
+
 }
 
 a {
