test new headerV6

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
 <a href="/"{% if page.url == "/" %} class="selected" {% endif %}>Home</a>
 </div>
 
-<div>
+<div class="logo">
 
-<img class="logo" src="/assets/images/flag.svg">
+<a href=""></a><img src="/assets/images/flag.svg"></div></a>
 
 </div>
 
