test new headerV6a

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
 <div class="logo">
 
-<a href=""></a><img src="/assets/images/flag.svg"></div></a>
+<a href="https://www.emho.studio"></a><img src="/assets/images/flag.svg"></a>
 
 </div>
 
