test new headerV6b

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
 <div class="logo">
 
-<a href="https://www.emho.studio"></a><img src="/assets/images/flag.svg"></a>
+<a href="https://www.emho.studio"> <img src="/assets/images/flag.svg"> </a>
 
 </div>
 
