test new headerV6d

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
 <a href="/"{% if page.url == "/" %} class="selected" {% endif %}>Home</a>
 </div>
 
-<div class="logo">
+<div >
 
-<a href="https://www.emho.studio"> <img src="/assets/images/flag.svg"> </a>
+<img class="logo" src="/assets/images/flag.svg">
 
 </div>
 
