test new headerV6e

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
 <a href="/"{% if page.url == "/" %} class="selected" {% endif %}>Home</a>
 </div>
 
-<div >
+<div>
 
-<img class="logo" src="/assets/images/flag.svg">
+<img src="/assets/images/flag.svg">
+
 
 </div>
 
