--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -92,6 +92,7 @@ div.blog-posts {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 80px;
+    justify-content: center;
 
 }
 
