test phone mediaqueryA

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -147,7 +147,7 @@ img.logo {
     
     div.blog-posts {
       display: flex;
-      flex-wrap: nowrap
+      flex-wrap: nowrap;
       justify-content: center;
   
   }
