--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -42,8 +42,16 @@ h1 {
 }
 
 h2 {
+
+  @media screen and (min-width: $break-large) {
     font-size: 40px;
     font-weight:700;
+  }
+  @media screen and (max-width: $break-small) {
+    font-size: 20px;
+    font-weight:700;
+  }
+   
 }
 
 h3 {
