--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -47,6 +47,9 @@ h2 {
     font-size: 40px;
     font-weight:700;
   }
+}
+
+h2 {
   @media screen and (max-width: $break-small) {
     font-size: 20px;
     font-weight:700;
@@ -73,6 +76,10 @@ section {
   @media screen and (min-width: $break-large) {
     align-items: center;
   }
+}
+
+section {
+
   @media screen and (max-width: $break-small) {
     text-align: center;
   }
