--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -74,10 +74,21 @@ h3 {
   }
 
 header {
-display: flex;
-flex-wrap: nowrap;
-justify-content: space-between;
-align-items: center;
+
+  @media screen and (min-width: $break-large) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @media screen and (max-width: $break-small) {
+    display: block;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
 }
 
 
@@ -160,8 +171,16 @@ img.logo {
 
 
   header a {
-    margin: 20px;
+
+    @media screen and (min-width: $break-large) {
+      margin: 20px;
     font-size: 16px;
+    }
+
+    @media screen and (max-width: $break-small) {
+      margin: 10px;
+    font-size: 12px;
+    }
 
   }
 
