--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -83,7 +83,7 @@ header {
   }
 
   @media screen and (max-width: $break-small) {
-    display: block;
+    display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
