change breakpoint elements V2e

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -38,6 +38,9 @@ body {
     @media screen and (min-width: $break-large) {
     margin:80px auto 0 auto;}
 
+    @media screen and (min-width: $break-mid) {
+      margin:80px auto 0 auto;}
+
     @media screen and (max-width: $break-small) {
       margin:20px;}
 
@@ -51,6 +54,15 @@ h1 {
 h2 {
 
   @media screen and (min-width: $break-large) {
+    font-family: $typography1;
+    font-size: 40px;
+    font-weight:700;
+  }
+}
+
+h2 {
+
+  @media screen and (min-width: $break-mid) {
     font-family: $typography1;
     font-size: 40px;
     font-weight:700;
@@ -72,6 +84,13 @@ h3 {
     font-size: 24px;
     font-weight:400;
   }
+
+  @media screen and (min-width: $break-mid) {
+    font-size: 24px;
+    font-weight:400;
+  }
+
+
   @media screen and (max-width: $break-small) {
     font-size: 16px;
     font-weight:400;
@@ -114,9 +133,14 @@ section {
   }
 }
 
-@media screen and (min-width: $break-mid) {
-  align-items: center;
+section {
+
+  @media screen and (min-width: $break-mid) {
+    align-items: center;
+  }
 }
+
+
 
 
 section {
@@ -267,8 +291,8 @@ img.logo {
     }
 
     @media screen and (min-width: $break-mid) {
-      max-width: 650px;
-      margin-bottom: 40px;
+      max-width: 550px;
+      margin-bottom: 30px;
     }
 
     @media screen and (min-width: $break-large) {
