--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -39,7 +39,7 @@ body {
     margin:80px auto 0 auto;}
 
     @media screen and (min-width: $break-mid) {
-      margin:80px auto 0 auto;}
+      margin:10px;}
 
     @media screen and (max-width: $break-small) {
       margin:20px;}
@@ -115,9 +115,7 @@ header {
   }
 
   @media screen and (max-width: $break-small) {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    
     align-items: center;
     margin-bottom: 40px;
   }
@@ -276,8 +274,19 @@ img.logo {
 
   div.blog-posts {
 
-    img {
-        max-width: 400px;
+    @media screen and (max-width: $break-small) {
+      max-width: 400px;
+      
+    }
+
+    @media screen and (max-width: $break-mid) {
+      max-width: 300px;
+      
+    }
+
+    @media screen and (max-width: $break-small) {
+      max-width: 300px;
+      
     }
 
   }
