--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -40,7 +40,7 @@ body {
     margin:80px auto 0 auto;}
 
     @media screen and (min-width: $break-mid) {
-      margin: 10px;}
+      margin:80px auto 0 auto;}
 
     @media screen and (max-width: $break-small) {
       margin: 10px;}
@@ -187,7 +187,7 @@ div.blog-posts {
   @media screen and (min-width: $break-mid) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 80px;
+    grid-column-gap: 20px;
     justify-content: center;
   }
 
@@ -273,7 +273,7 @@ img.logo {
     }
   }
 
-  div.blog-posts {
+  div.blog-posts img {
 
     @media screen and (max-width: $break-small) {
       max-width: 400px;
