change breakpoint elements V3

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -270,7 +270,7 @@ img.logo {
     }
   }
 
-  div.blog-posts img {
+  a img {
 
     @media screen and (max-width: $break-small) {
       max-width: 400px;
