--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -131,6 +131,8 @@ a {
     text-decoration: none;  
 }
 
+
+
 a.selected, p a {
 color: $blue;
 text-decoration: none;
@@ -159,26 +161,11 @@ div.blog-posts {
   }
 
 
-
   @media screen and (max-width: $break-small) {
     
     text-align: center;
   }
 
-  a img {
-
-    @media screen and (max-width: $break-small) {
-      max-width: 400px;
-      
-    }
-
-
-    @media screen and (max-width: $break-small) {
-      max-width: 300px;
-      
-    }
-
-  }
 
 }
 
@@ -267,6 +254,22 @@ img.logo {
     @media screen and (min-width: $break-large) {
       max-width: 650px;
       margin-bottom: 40px;
+    }
+
+  }
+
+
+  a img {
+
+    @media screen and (max-width: $break-big) {
+      max-width: 700px;
+      
+    }
+
+
+    @media screen and (max-width: $break-small) {
+      max-width: 300px;
+      
     }
 
   }
