change breakpoint elements V3f

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -256,7 +256,7 @@ img.logo {
 
   a img {
 
-    @media screen and (max-width: $break-big) {
+    @media screen and (max-width: $break-large) {
       max-width: 700px;
       
     }
