change breakpoint elements V3g

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -229,8 +229,18 @@ img.logo {
     }
 
     img {
+
+      @media screen and (min-width: $break-large) {
         max-width: 780px;
     }
+
+    img {
+
+      @media screen and (min-width: $break-small) {
+        max-width: 400px;
+    }
+
+
   }
 
 
