--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -233,6 +233,7 @@ img.logo {
       @media screen and (min-width: $break-large) {
         max-width: 780px;
     }
+  }
 
     img {
 
@@ -242,6 +243,7 @@ img.logo {
 
 
   }
+}
 
 
 
