change breakpoint elements V3m

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -270,7 +270,15 @@ img.logo {
 
   div.post img {
 
-    
-    max-width: 300px;
+    @media screen and (max-width: $break-large) {
+      max-width: 700px;
+      
+    }
+
+
+    @media screen and (max-width: $break-small) {
+      max-width: 350px;
+      
+    }
     
   }
