--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -135,9 +135,9 @@ a {
 
 
 a.selected, p a {
-color: $blue;
+color: $red;
 text-decoration: none;
-border-bottom: 3px solid $red;
+border-bottom: 3px solid $blue;
 }
 
 
